Fix flash error text alignment

--- a/src/sass/mixins/_flash.scss
+++ b/src/sass/mixins/_flash.scss
@@ -8,6 +8,7 @@
   border-color: $border;
   background-color: $background;
   color: $color;
+  text-align: left;
 
   @if $icon == "true" {
     $icon: fa-variables.$fa-var-check;
